<resources>
    <string name="app_name">QuizGameApp</string>
    <string name="baseScore">You Earned: $</string>
    <string name="amountEarned">You earned: $</string>
    <string name="q1">How many blue stripes are there on the U.S. flag?</string>
    <string name="a1_1">6</string>
    <string name="a1_2">7</string>
    <string name="a1_3">13</string>
    <string name="a1_4">0</string>
    <string name="confirm">Confirm</string>
    <string name="question2">What is the color of Donald Duck’s bowtie?</string>
    <string name="a2_1">Red</string>
    <string name="a2_2">Yellow</string>
    <string name="a2_3">Blue</string>
    <string name="a2_4">White</string>
    <string name="question3">Which planet is the hottest?</string>
    <string name="a3_1">Mercury</string>
    <string name="a3_2">Saturn</string>
    <string name="a3_3">Venus</string>
    <string name="a3_4">Mars</string>
    <string name="question4">How many bones are there in the human body?</string>
    <string name="a4_1">201</string>
    <string name="a4_2">206</string>
    <string name="a4_3">209</string>
    <string name="a4_4">214</string>
    <string name="question5">Which country gifted the Statue of Liberty to the U.S.?</string>
    <string name="a5_1">Germany</string>
    <string name="a5_2">England</string>
    <string name="a5_3">Spain</string>
    <string name="a5_4">France</string>
    <string name="question6">As an adult, how many teeth should you have in your mouth?</string>
    <string name="a6_1">30</string>
    <string name="a6_2">32</string>
    <string name="a6_3">28</string>
    <string name="a6_4">34</string>
    <string name="question7">How many elements are there on the periodic table?</string>
    <string name="a7_1">112</string>
    <string name="a7_2">118</string>
    <string name="a7_3">120</string>
    <string name="a7_4">143</string>
</resources>